--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,9 @@
     validate: /usr/sbin/sshd -t -f %s
     backup: yes
   notify: restart sshd
+
+- name: Deactivate short moduli
+  command: /bin/sh -c 'cp -a /etc/ssh/moduli /etc/ssh/moduli.bak && awk \'$5 >= 3071\' /etc/ssh/moduli > /etc/ssh/moduli.tmp && mv /etc/ssh/moduli.tmp /etc/ssh/moduli'
+  args:
+    creates: /etc/ssh/moduli.bak
+  notify: restart sshd
