--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,6 +4,10 @@ galaxy_info:
   license: MIT
   min_ansible_version: 2.4
   platforms:
+    - name: EL
+      versions:
+        - 7
+        - 6
     - name: Fedora
       versions:
         - 28
