Fix quoted string error

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
   notify: restart sshd
 
 - name: Deactivate short moduli
-  command: /bin/sh -c 'cp -a /etc/ssh/moduli /etc/ssh/moduli.bak && awk \'$5 >= 3071\' /etc/ssh/moduli > /etc/ssh/moduli.tmp && mv /etc/ssh/moduli.tmp /etc/ssh/moduli'
+  command: /bin/sh -c 'cp -a /etc/ssh/moduli /etc/ssh/moduli.bak && awk '"'"'$5 >= 3071'"'"' /etc/ssh/moduli > /etc/ssh/moduli.tmp && mv /etc/ssh/moduli.tmp /etc/ssh/moduli'
   args:
     creates: /etc/ssh/moduli.bak
   notify: restart sshd
