Set Galaxy role name

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 galaxy_info:
   author: Ryan Chouinard
   description: Secure SSH based on Mozilla's modern guidelines
+  role_name: rchouinard.secure-sshd
   license: MIT
   min_ansible_version: 2.4
   platforms:
