--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,4 +1,16 @@
 ---
+systemd_template: &systemd
+  command: /sbin/init
+  environment:
+    container: docker
+  tmpfs:
+    - /run
+    - /tmp
+  volumes:
+    - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  capabilities:
+    - SYS_ADMIN
+
 dependency:
   name: galaxy
 driver:
@@ -6,19 +18,19 @@ driver:
 platforms:
   - name: fedora-rawhide
     image: docker.io/fedora:rawhide
-    pre_build_image: true
+    <<: *systemd
   - name: fedora-31
     image: docker.io/fedora:31
-    pre_build_image: true
+    <<: *systemd
   - name: fedora-30
     image: docker.io/fedora:30
-    pre_build_image: true
+    <<: *systemd
   - name: centos-8
     image: docker.io/centos:8
-    pre_build_image: true
+    <<: *systemd
   - name: centos-7
     image: docker.io/centos:7
-    pre_build_image: true
+    <<: *systemd
 provisioner:
   name: ansible
 verifier:
