--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -10,10 +10,7 @@
       - sudo
       state: present
 
-  - name: Generate host keys
-    command:
-      cmd: "{% if ansible_distribution_major_version != '7' %}/usr/libexec/openssh{% else %}/usr/sbin{% endif %}/sshd-keygen {{ item }}"
-    loop:
-    - rsa
-    - ecdsa
-    - ed25519
+  - name: Start service
+    service:
+      name: sshd
+      state: started
